--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
   },
   "homepage": "https://github.com/rodrigoBojorquez/server-project-manager#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "mysql2": "^3.9.0"
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.9.0",
+    "nodemailer": "^6.9.8"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
