--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.0",
-    "nodemailer": "^6.9.8"
+    "nodemailer": "^6.9.8",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
